GearsetPOC/force-app/main/default/objects/Ticket_upgrade_information__c/Ticket_upgrade_information__c.object-meta.xml
<CustomObject>
    <label>Ticket upgrade information</label>
    <nameField>
        <displayFormat>TUI-{0000}</displayFormat>
        <label>Ticket upgrade information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket upgrade information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>