GearsetPOC/force-app/main/default/objects/Ticket_upgrade_information__c/fields/CarrierCode__c.field-meta.xml
<CustomField>
    <fullName>CarrierCode__c</fullName>
    <label>CarrierCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Carriers</valueSetName>
    </valueSet>
</CustomField>