GearsetPOC/force-app/main/default/objects/Ticket_upgrade_information__c/fields/Current_ticket_class2__c.field-meta.xml
<CustomField>
    <fullName>Current_ticket_class2__c</fullName>
    <label>Current ticket class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Travel_Classes</valueSetName>
    </valueSet>
</CustomField>