GearsetPOC/force-app/main/default/objects/Ticket_upgrade_information__c/fields/Current_ticket_class__c.field-meta.xml
<CustomField>
    <fullName>Current_ticket_class__c</fullName>
    <label>Current ticket class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Standard Premier</fullName>
            </value>
            <value>
                <fullName>Business Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>