GearsetPOC/force-app/main/default/objects/Ticket_upgrade_information__c/fields/Journey_Type__c.field-meta.xml
<CustomField>
    <fullName>Journey_Type__c</fullName>
    <label>Journey Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>