GearsetPOC/force-app/main/default/objects/Ticket_upgrade_information__c/fields/New_Ticket_Class2__c.field-meta.xml
<CustomField>
    <fullName>New_Ticket_Class2__c</fullName>
    <label>Upgrade to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Travel_Classes</valueSetName>
    </valueSet>
</CustomField>