GearsetPOC/force-app/main/default/objects/Ticket_upgrade_information__c/fields/New_Ticket_Class__c.field-meta.xml
<CustomField>
    <fullName>New_Ticket_Class__c</fullName>
    <label>Upgrade to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Premier</fullName>
            </value>
            <value>
                <fullName>Business Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>