GearsetPOC/force-app/main/default/objects/Ticket_upgrade_information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Journey_Type__c</columns>
    <columns>CarrierCode__c</columns>
    <columns>Points__c</columns>
    <columns>Current_ticket_class2__c</columns>
    <columns>New_Ticket_Class2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>